test/e2e/app-dir/next-config-ts/type-error/next.config.ts
import type { NextConfig } from 'next'

// type error
let foo: number = 'foo'

const nextConfig: NextConfig = {
  env: {
    foo,
  },
}

export default nextConfig
